Add workflow run

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
 # .github/workflows/ci.yml
-# GitHub Actions documentation
-# => https://docs.github.com/en/actions
-name: CI
+# GitHub Actions documentation => https://docs.github.com/en/actions
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+name: CI with Gradle
+
 on:
   push:
     branches: [ master, main ]
@@ -13,7 +11,9 @@ on:
 
 jobs:
   gradle:
+
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
