--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -28,7 +28,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build with Gradle
-        run: ./gradlew run --console=plain --quiet > result.txt
+        run: ./gradlew run --console=plain --quiet  --exclude-task test > result.txt
 
       - name: Preserve result
         uses: actions/upload-artifact@v2
