--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -16,13 +16,16 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 1
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: 17
-          distribution: 'adopt'
+          distribution: adopt
+          cache: gradle
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
